--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Selamat Melangkah Lebih Jauh, Kawan!</h1>
         <p class="tagline">Terima kasih sudah memberikan warna dalam keseharian kita.</p>
 
-        <img src="foto-temanmu.jpg" alt="Foto Teman" class="foto">
+        <img src="foto-temanmu.jpg" alt="Foto Teman" />
 
         <div class="pesan">
     <h2>Pesan untukmu:</h2>
